﻿PbootCMS V1.2.2 build 2018-10-02
1、新增模板嵌套引用的支持；
2、新增在线更新涉及数据库时自动备份数据库；
3、大幅提高Sqlite多条数据写入速度；
4、新增在线更新分支选择功能；
5、新增对指定代码块不做标签解析的标签；
6、修复自定义表单多选提交时数据错误；

PbootCMS V1.2.1 build 2018-09-12
1、新增在线升级新版本红点提示；
2、新增程序部署到非根目录时虚拟目录大小写不区分；
3、新增表单提交频率安全检测；
4、调整程序非伪静态时不再显示html后缀；
5、调整程序留言表单外的自定义表单不再要求验证码；
6、修复上版本首页分页不正常问题；
7、优化完善默认模板;

PbootCMS V1.2.0 build 2018-09-04
1、系统优化及安全修复；
2、修复API搜索与页面实现不统一；
3、优化后台内容页栏目显示逻辑；
4、新增后台轮播、链接页面批量排序；
5、升级layui到最新版本；
6、新增列表标签isico、ispics、istop、isrecommend、isheadline调节参数；
7、新增面包屑连接符separatoriconc及indexicon参数设置字体图标class；
8、优化分页条代码；
9、新增内容截取时自动添加省略号；
10、基于bootstrap v4的全新默认模板正式上线；
11、修复在线更新浏览器兼容性问题；

PbootCMS V1.1.9 build 2018-08-17
1、系统优化及安全修复(重要)；
2、修复自定义表单Mysql时添加失败问题；
3、修复后台模板一些小错误；
4、修复影响缓存效果的一些问题；
5、新增后台在线更新功能；
6、新增附件大小标签；

PbootCMS V1.1.8 build 2018-08-07
1、修复提交表单多选字段接收数据问题；
2、修复登陆过程中二次登陆在页面不刷新时验证失败问题；
3、新增搜索结果fuzzy参数来控制是否模糊匹配；
4、新增父分类、顶级分类名称及链接独立标签，具体见手册；
5、新增内容多图拖动排序功能；

PbootCMS V1.1.7 build 2018-08-01
1、修复测试邮件不发送到填写的测试邮箱问题；
2、修复友情链接添加时排序报错问题；
3、修复API幻灯片及友情链接排序无效；
4、修复站内Ajax调用API数据时间戳过期问题；
5、新增自定义标签开关类型；
6、新增自定义表单数据调取标签；
7、新增单页设置跳转后内容不再出现管理列表中；
8、新增搜索支持多字段同时匹配；
9、新增点击上传的图片自动添加到编辑器；
10、优化表单提交验证；
11、其它问题修复与优化；

PbootCMS V1.1.6 build 2018-07-21
1、优化编辑器配置及安全加固;
2、优化内容管理列表布局；
3、增强系统后台及标签解析引擎安全性；
4、调整runtime标签展示方式；
5、新增Gzip页面压缩功能及后台开关；
6、新增支持根目录定义404.html匹配错误URL访问；
7、新增缩略图自动缩放更小图功能；
8、新增config/route.php文件里定义路由规则的支持；
9、新增调用指定栏目 标签scode支持多个分类；
10、新增如果栏目及内容关键字标签为空时自动使用全局关键字；
11、新增如果栏目及内容描述标签为空时自动使用全局描述；
12、新增全局自动页面标题标签{pboot:pagetitle}；
13、新增全局自动页面关键字标签{pboot:pagekeywords}；
14、新增全局自动页面描述标签{pboot:pagedescription}
15、新增留言表单添加更多字段的支持；
16、新增幻灯片、友情链接、扩展字段排序的支持；
17、新增sitemap生成，读取地址/index.php/sitemap；
18、新增URL路径支持中文；
19、新增中文用户名登陆的支持；
20、新增API正文内容返回图片路径自动添加网址路径；
21、新增邮件配置中发送测试邮件功能；
22、新增API调用自定义表单数据接口；
23、其它问题修复与优化；
注意：升级到此版本需要同时升级数据库，脚本见升级包中。

PbootCMS V1.1.5 build 2018-07-10
1、修复开启静态缓存后无法切换语言问题；
2、修复开启静态缓存后无法自动切换手机版；
3、修复数据库安全检查不准问题；
4、修复后台多选字段无法取消问题；
5、新增调试模式后台开关；
6、新增访问地址不存在时404状态信息；
7、新增运行时间标签{pboot:runtime}；
8、新增留言验证码判断标签{pboot:checkcodestatus}；