@@ -5,6 +5,7 @@
 4、新增在线更新分支选择功能；
 5、新增对指定代码块不做标签解析的标签；
 6、修复自定义表单多选提交时数据错误；
+7、新增列表排序自定义组合的支持,如:order='istop desc,id asc'
 
 PbootCMS V1.2.1 build 2018-09-12
 1、新增在线升级新版本红点提示；
